Fix contrast error of Newsletter button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ header {
 
 #menu button{
     background-color: inherit;
-    color: chocolate;
+    color: rgb(177, 98, 43);
 }
 
 #menu button:hover{
